kubernetes/apps/sso/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sso
  labels:
    backups.kalexlab.xyz/use: "true"
