kubernetes/apps/sso/manifests/authelia.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  labels:
    kalexlab.xyz/app: sso
    kalexlab.xyz/component: authelia
spec:
  type: ClusterIP
  ports:
    - name: authelia
      port: 9091
      protocol: TCP
  selector:
    kalexlab.xyz/app: sso
    kalexlab.xyz/component: authelia
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  labels:
    kalexlab.xyz/app: sso
    kalexlab.xyz/component: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: sso
      kalexlab.xyz/component: authelia
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: sso
        kalexlab.xyz/component: authelia
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: app
          image: "ghcr.io/authelia/authelia:4.39.20"
          imagePullPolicy: Always
          ports:
            - containerPort: 9091
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: 100Mi
              cpu: 10m
            limits:
              memory: 400Mi
              cpu: 200m
          readinessProbe:
            httpGet:
              path: /
              port: 9091
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 9091
            failureThreshold: 3
            periodSeconds: 30
          volumeMounts:
            - mountPath: /config
              name: authelia-config
            - mountPath: /config/secrets/oidc/jwks
              name: authelia-oidc-jwks
            - mountPath: /tmp
              name: tmp
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        runAsGroup: 10000
        fsGroup: 10000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: authelia-config
          configMap:
            name: authelia-config
        - name: authelia-oidc-jwks
          secret:
            secretName: authelia-oidc-jwks
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
