kubernetes/apps/sso/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sso-ingress
  annotations:
    external-dns.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.kalexlab.xyz`)
      services:
        - name: authelia
          port: 9091
  tls:
    secretName: sso-ingress-certificate-secret
