kubernetes/apps/sso/manifests/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-cluster-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: coredns
          podSelector:
            matchLabels:
              k8s-app: coredns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authelia
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: sso
      kalexlab.xyz/component: authelia
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 9091
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: sso
              kalexlab.xyz/component: cluster
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: sso
              kalexlab.xyz/component: cache
      ports:
        - protocol: TCP
          port: 6379
    # Authelia uses NTP to determine clock offset
    #   ref: https://www.authelia.com/configuration/miscellaneous/ntp/
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - protocol: UDP
          port: 123
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: sso
      kalexlab.xyz/component: cluster
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: sso
              kalexlab.xyz/component: authelia
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cache
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: sso
      kalexlab.xyz/component: cache
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: sso
              kalexlab.xyz/component: authelia
      ports:
        - protocol: TCP
          port: 6379
